--- a/menu-a-la-francaise.html
+++ b/menu-a-la-francaise.html
@@ -28,6 +28,7 @@
     <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt= "À la française">
 </div>
 
+<div class="menu__content">
 <div class="menu__info">
   <h3 class="menu__name">À la française</h3>
   <span class="menu__heart">
@@ -36,96 +37,127 @@
 </div>
 
 <div class="menu__category">
-    <h4 class="menu__category-title">ENTRÉES</h4>
-    <div class="menu__list">
+  <h4 class="menu__category-title">ENTRÉES</h4>
+  <div class="menu__list">
 
-      <article class="menu__item">
-        <div>
-        <h5 class="menu__item-name">Tartare de poulpe acidulé</h5>
-        <p class="menu__item-description">Aux zestes d'orange</p>
-        </div>
-        <span class="menu__item-price">25€</span>
-      </article>
+    <article class="menu__item">
+      <div>
+        <h5 class="menu__item-name">Œuf mollet</h5>
+        <p class="menu__item-description">Et sa purée de panais</p>
+      </div>
+      <div class="menu__item-check">
+        <span class="menu__item-price">15€</span>
+        <i class="fa-solid fa-circle-check"></i>
+      </div>
+    </article>
 
-      <article class="menu__item">
-        <div>
-        <h5 class="menu__item-name">Velouté de légumes d'antan</h5>
+    <article class="menu__item">
+      <div>
+        <h5 class="menu__item-name">Velouté de légumes d’antan</h5>
         <p class="menu__item-description">Carotte, panais, topinambour</p>
-        </div>
-        <span class="menu__item-price">35€</span>
-      </article>
-
-      <article class="menu__item">
-        <div>
-        <h5 class="menu__item-name">Soupe à l'oignon</h5>
-        <p class="menu__item-description">Revisitée</p>
-        </div>
+      </div>
+      <div class="menu__item-check">
         <span class="menu__item-price">20€</span>
-      </article>
-    </div>
+        <i class="fa-solid fa-circle-check"></i>
+      </div>
+    </article>
+
+    <article class="menu__item">
+      <div>
+        <h5 class="menu__item-name">Soupe à l’oignon</h5>
+        <p class="menu__item-description">Revisitée</p>
+      </div>
+      <div class="menu__item-check">
+        <span class="menu__item-price">15€</span>
+        <i class="fa-solid fa-circle-check"></i>
+      </div>
+    </article>
+
   </div>
-  
-  <div class="menu__category">
-    <h4 class="menu__category-title">PLATS</h4>
-    <div class="menu__list">
+</div>
 
-      <article class="menu__item">
-        <div>
-          <h5 class="menu__item-name">Coquilles Saint-Jacques</h5>
-          <p class="menu__item-description">Accompagnées d'une purée de panais</p>
-        </div>
+
+<div class="menu__category">
+  <h4 class="menu__category-title">PLATS</h4>
+  <div class="menu__list">
+
+    <article class="menu__item">
+      <div>
+        <h5 class="menu__item-name">Coquilles Saint-Jacques</h5>
+        <p class="menu__item-description">Accompagnées d’une purée de panais</p>
+      </div>
+      <div class="menu__item-check">
         <span class="menu__item-price">40€</span>
-      </article>
+        <i class="fa-solid fa-circle-check"></i>
+      </div>
+    </article>
 
-      <article class="menu__item">
-        <div>
+    <article class="menu__item">
+      <div>
         <h5 class="menu__item-name">Magret de canard</h5>
         <p class="menu__item-description">Et parmentier de pommes de terre</p>
-        </div>
+      </div>
+      <div class="menu__item-check">
         <span class="menu__item-price">35€</span>
-      </article>
+        <i class="fa-solid fa-circle-check"></i>
+      </div>
+    </article>
 
-      <article class="menu__item">
-        <div>
+    <article class="menu__item">
+      <div>
         <h5 class="menu__item-name">Pigeonneau d’Ille-et-Vilaine</h5>
         <p class="menu__item-description">Sur son lit de gnocchis aux légumes</p>
-        </div>
+      </div>
+      <div class="menu__item-check">
         <span class="menu__item-price">44€</span>
-      </article>
-    </div>
+        <i class="fa-solid fa-circle-check"></i>
+      </div>
+    </article>
+
   </div>
+</div>
 
-  <div class="menu__category">
-    <h4 class="menu__category-title">DESSERTS</h4>
-    <div class="menu__list">
+<div class="menu__category">
+  <h4 class="menu__category-title">DESSERTS</h4>
+  <div class="menu__list">
 
-      <article class="menu__item">
-        <div>
+    <article class="menu__item">
+      <div>
         <h5 class="menu__item-name">Pétales de violettes glacés</h5>
         <p class="menu__item-description">Et purée de noisettes</p>
-        </div>
+      </div>
+      <div class="menu__item-check">
         <span class="menu__item-price">18€</span>
-      </article>
+        <i class="fa-solid fa-circle-check"></i>
+      </div>
+    </article>
 
-      <article class="menu__item">
-        <div>
+    <article class="menu__item">
+      <div>
         <h5 class="menu__item-name">Fondant au chocolat</h5>
         <p class="menu__item-description">Revisité</p>
-        </div>
+      </div>
+      <div class="menu__item-check">
         <span class="menu__item-price">22€</span>
-      </article>
+        <i class="fa-solid fa-circle-check"></i>
+      </div>
+    </article>
 
-      <article class="menu__item">
-        <div>
+    <article class="menu__item">
+      <div>
         <h5 class="menu__item-name">Millefeuille croustillant</h5>
         <p class="menu__item-description">Myrtilles et pâte d’amande</p>
-        </div>
+      </div>
+      <div class="menu__item-check">
         <span class="menu__item-price">23€</span>
-      </article>
-    </div>
-  </div>
+        <i class="fa-solid fa-circle-check"></i>
+      </div>
+    </article>
 
+  </div>
   <button class="button__intro">Commander</button>
+</div>
+  </div>
 
   <footer class="footer">
     <div class="footer__logo">
