--- a/menu-la-note-enchantee.html
+++ b/menu-la-note-enchantee.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>La note enchantée</title>
-   <link rel="stylesheet" type="text/css" href="css/menu.css">
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-   <link rel="preconnect" href="https://fonts.googleapis.com">
-   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Shrikhand&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>La note enchantée</title>
+  <link rel="stylesheet" type="text/css" href="css/menu.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Shrikhand&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -20,85 +20,105 @@
   <a href="index.html" class="header__logo">
     <img src="images/logo/ohmyfood.png" alt="Logo ohmyfood">
   </a>
-  <div>
-  </div>
+  <div></div>
 </header>
 
 <div class="menu__img">
-    <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt= "La note enchantée" >
+  <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
 </div>
 
-<div class="menu__info">
-  <h3 class="menu__name">La note enchantée</h3>
-  <span class="menu__heart">
-    <i class="fa-regular fa-heart"></i>
-  </span>
-</div>
+<div class="menu__content">
 
-<div class="menu__category">
+  <div class="menu__info">
+    <h3 class="menu__name">La note enchantée</h3>
+    <span class="menu__heart">
+      <i class="fa-regular fa-heart"></i>
+    </span>
+  </div>
+
+  <div class="menu__category">
     <h4 class="menu__category-title">ENTRÉES</h4>
     <div class="menu__list">
-
       <article class="menu__item">
         <div>
-        <h5 class="menu__item-name">Ravioles de foie gras</h5>
-        <p class="menu__item-description">Accompagnées de leur crème à la truffe</p>
+          <h5 class="menu__item-name">Ravioles de foie gras</h5>
+          <p class="menu__item-description">Accompagnées de leur crème à la truffe</p>
         </div>
-        <span class="menu__item-price">25€</span>
+        <div class="menu__item-check">
+          <span class="menu__item-price">25€</span>
+          <i class="fa-solid fa-circle-check"></i>
+        </div>
       </article>
 
       <article class="menu__item">
         <div>
-        <h5 class="menu__item-name">Caviar osciètre</h5>
-        <p class="menu__item-description">Sur blini à la farine de blé noir</p>
+          <h5 class="menu__item-name">Caviar osciètre</h5>
+          <p class="menu__item-description">Sur blini à la farine de blé noir</p>
         </div>
-        <span class="menu__item-price">35€</span>
+        <div class="menu__item-check">
+          <span class="menu__item-price">35€</span>
+          <i class="fa-solid fa-circle-check"></i>
+        </div>
       </article>
 
       <article class="menu__item">
         <div>
-        <h5 class="menu__item-name">Homard et espuma de potiron</h5>
-        <p class="menu__item-description">Marinés aux zestes d'orange</p>
+          <h5 class="menu__item-name">Homard et espuma de potiron</h5>
+          <p class="menu__item-description">Marinés aux zestes d'orange</p>
         </div>
-        <span class="menu__item-price">20€</span>
+        <div class="menu__item-check">
+          <span class="menu__item-price">20€</span>
+          <i class="fa-solid fa-circle-check"></i>
+        </div>
       </article>
 
       <article class="menu__item">
         <div>
-        <h5 class="menu__item-name">Foie gras de canard cuit entier</h5>
-        <p class="menu__item-description">Confiture de figue et pain toasté</p>
+          <h5 class="menu__item-name">Foie gras de canard cuit entier</h5>
+          <p class="menu__item-description">Confiture de figue et pain toasté</p>
         </div>
-        <span class="menu__item-price">35€</span>
+        <div class="menu__item-check">
+          <span class="menu__item-price">35€</span>
+          <i class="fa-solid fa-circle-check"></i>
+        </div>
       </article>
     </div>
   </div>
-  
+
   <div class="menu__category">
     <h4 class="menu__category-title">PLATS</h4>
     <div class="menu__list">
-
       <article class="menu__item">
         <div>
-        <h5 class="menu__item-name">Noix de coquilles Saint-Jacques</h5>
-        <p class="menu__item-description">Sur lit de purée de céleri-rave</p>
+          <h5 class="menu__item-name">Noix de coquilles Saint-Jacques</h5>
+          <p class="menu__item-description">Sur lit de purée de céleri-rave</p>
         </div>
-        <span class="menu__item-price">40€</span>
+        <div class="menu__item-check">
+          <span class="menu__item-price">40€</span>
+          <i class="fa-solid fa-circle-check"></i>
+        </div>
       </article>
 
       <article class="menu__item">
         <div>
-        <h5 class="menu__item-name">Langoustine poêlée</h5>
-        <p class="menu__item-description">Purée de patate douce</p>
+          <h5 class="menu__item-name">Langoustine poêlée</h5>
+          <p class="menu__item-description">Purée de patate douce</p>
         </div>
-        <span class="menu__item-price">35€</span>
+        <div class="menu__item-check">
+          <span class="menu__item-price">35€</span>
+          <i class="fa-solid fa-circle-check"></i>
+        </div>
       </article>
 
       <article class="menu__item">
         <div>
-        <h5 class="menu__item-name">Mijoté de queue de bœuf</h5>
-        <p class="menu__item-description">Et riz sauvage aux zestes de citron</p>
+          <h5 class="menu__item-name">Mijoté de queue de bœuf</h5>
+          <p class="menu__item-description">Et riz sauvage aux zestes de citron</p>
         </div>
-        <span class="menu__item-price">44€</span>
+        <div class="menu__item-check">
+          <span class="menu__item-price">44€</span>
+          <i class="fa-solid fa-circle-check"></i>
+        </div>
       </article>
     </div>
   </div>
@@ -106,47 +126,54 @@
   <div class="menu__category">
     <h4 class="menu__category-title">DESSERTS</h4>
     <div class="menu__list">
-
       <article class="menu__item">
         <div>
-        <h5 class="menu__item-name">Macaron noisette et chocolat</h5>
-        <p class="menu__item-description">Glace au caramel brun et sel de Guérande</p>
+          <h5 class="menu__item-name">Macaron noisette et chocolat</h5>
+          <p class="menu__item-description">Glace au caramel brun et sel de Guérande</p>
         </div>
-        <span class="menu__item-price">18€</span>
+        <div class="menu__item-check">
+          <span class="menu__item-price">18€</span>
+          <i class="fa-solid fa-circle-check"></i>
+        </div>
       </article>
 
       <article class="menu__item">
         <div>
-        <h5 class="menu__item-name">Baba au rhum revisité</h5>
-        <p class="menu__item-description">Avec son coulis de citron</p>
+          <h5 class="menu__item-name">Baba au rhum revisité</h5>
+          <p class="menu__item-description">Avec son coulis de citron</p>
         </div>
-        <span class="menu__item-price">22€</span>
+        <div class="menu__item-check">
+          <span class="menu__item-price">22€</span>
+          <i class="fa-solid fa-circle-check"></i>
+        </div>
       </article>
 
       <article class="menu__item">
         <div>
-        <h5 class="menu__item-name">Tarte au citron meringuée</h5>
-        <p class="menu__item-description">Déstructurée</p>
+          <h5 class="menu__item-name">Tarte au citron meringuée</h5>
+          <p class="menu__item-description">Déstructurée</p>
         </div>
-        <span class="menu__item-price">23€</span>
+        <div class="menu__item-check">
+          <span class="menu__item-price">23€</span>
+          <i class="fa-solid fa-circle-check"></i>
+        </div>
       </article>
     </div>
+    <button class="button__intro">Commander</button>
   </div>
+</div>
 
-  <button class="button__intro">Commander</button>
-
-  <footer class="footer">
-    <div class="footer__logo">
-      <h2>ohmyfood</h2>
-    </div>
-    <div class="footer__menu">
-      <p class="footer__item"><i class="fa-solid fa-utensils"></i> Proposer un restaurant</p>
-      <p class="footer__item"><i class="fa-solid fa-handshake-angle"></i> Devenir partenaire</p>
-      <p class="footer__item">Mentions légales</p>
-      <p class="footer__item">Contact</p>
-    </div>
-  </footer>
-
+<footer class="footer">
+  <div class="footer__logo">
+    <h2>ohmyfood</h2>
+  </div>
+  <div class="footer__menu">
+    <p class="footer__item"><i class="fa-solid fa-utensils"></i> Proposer un restaurant</p>
+    <p class="footer__item"><i class="fa-solid fa-handshake-angle"></i> Devenir partenaire</p>
+    <p class="footer__item">Mentions légales</p>
+    <p class="footer__item">Contact</p>
+  </div>
+</footer>
 
 </body>
 </html>
