--- a/menu-la-palette-du-gout.html
+++ b/menu-la-palette-du-gout.html
@@ -28,6 +28,7 @@
     <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût" >
 </div>
 
+<div class="menu__content">
 <div class="menu__info">
   <h3 class="menu__name">La palette du goût</h3>
   <span class="menu__heart">
@@ -36,96 +37,126 @@
 </div>
 
 <div class="menu__category">
-    <h4 class="menu__category-title">ENTRÉES</h4>
-    <div class="menu__list">
+  <h4 class="menu__category-title">ENTRÉES</h4>
+  <div class="menu__list">
 
-      <article class="menu__item">
-        <div>
+    <article class="menu__item">
+      <div>
         <h5 class="menu__item-name">Fricassée d'escargots</h5>
         <p class="menu__item-description">Au piment d'Espelette</p>
-        </div>
+      </div>
+      <div class="menu__item-check">
         <span class="menu__item-price">25€</span>
-      </article>
+        <i class="fa-solid fa-circle-check"></i>
+      </div>
+    </article>
 
-      <article class="menu__item">
-        <div>
+    <article class="menu__item">
+      <div>
         <h5 class="menu__item-name">Foie gras de canard mi-cuit</h5>
         <p class="menu__item-description">Et ses copeaux de truffe noire</p>
-        </div>
+      </div>
+      <div class="menu__item-check">
         <span class="menu__item-price">35€</span>
-      </article>
+        <i class="fa-solid fa-circle-check"></i>
+      </div>
+    </article>
 
-      <article class="menu__item">
-        <div>
+    <article class="menu__item">
+      <div>
         <h5 class="menu__item-name">Œuf au plat</h5>
         <p class="menu__item-description">Assaisonné à la truffe sur lit de caviar</p>
-        </div>
+      </div>
+      <div class="menu__item-check">
         <span class="menu__item-price">20€</span>
-      </article>
-    </div>
-  </div>
-  
-  <div class="menu__category">
-    <h4 class="menu__category-title">PLATS</h4>
-    <div class="menu__list">
+        <i class="fa-solid fa-circle-check"></i>
+      </div>
+    </article>
 
-      <article class="menu__item">
-        <div>
+  </div>
+</div>
+  
+<div class="menu__category">
+  <h4 class="menu__category-title">PLATS</h4>
+  <div class="menu__list">
+
+    <article class="menu__item">
+      <div>
         <h5 class="menu__item-name">Filet de bœuf aux herbes</h5>
         <p class="menu__item-description">Accompagné de sa ribambelle de légumes</p>
-        </div>
+      </div>
+      <div class="menu__item-check">
         <span class="menu__item-price">40€</span>
-      </article>
+        <i class="fa-solid fa-circle-check"></i>
+      </div>
+    </article>
 
-      <article class="menu__item">
-        <div>
+    <article class="menu__item">
+      <div>
         <h5 class="menu__item-name">Parmentier de queue de bœuf</h5>
         <p class="menu__item-description">À la truffe noire sur sa purée de panais</p>
-        </div>
+      </div>
+      <div class="menu__item-check">
         <span class="menu__item-price">35€</span>
-      </article>
+        <i class="fa-solid fa-circle-check"></i>
+      </div>
+    </article>
 
-      <article class="menu__item">
-        <div>
+    <article class="menu__item">
+      <div>
         <h5 class="menu__item-name">Filet de turbot</h5>
         <p class="menu__item-description">Aux agrumes</p>
-        </div>
+      </div>
+      <div class="menu__item-check">
         <span class="menu__item-price">44€</span>
-      </article>
-    </div>
+        <i class="fa-solid fa-circle-check"></i>
+      </div>
+    </article>
+
   </div>
+</div>
 
-  <div class="menu__category">
-    <h4 class="menu__category-title">DESSERTS</h4>
-    <div class="menu__list">
+<div class="menu__category">
+  <h4 class="menu__category-title">DESSERTS</h4>
+  <div class="menu__list">
 
-      <article class="menu__item">
-        <div>
+    <article class="menu__item">
+      <div>
         <h5 class="menu__item-name">Paris-Brest</h5>
         <p class="menu__item-description">Revisité</p>
-        </div>
+      </div>
+      <div class="menu__item-check">
         <span class="menu__item-price">18€</span>
-      </article>
+        <i class="fa-solid fa-circle-check"></i>
+      </div>
+    </article>
 
-      <article class="menu__item">
-        <div>
+    <article class="menu__item">
+      <div>
         <h5 class="menu__item-name">Macaron au chocolat d'exception</h5>
         <p class="menu__item-description">Et glace à la vanille de Madagascar</p>
-        </div>
+      </div>
+      <div class="menu__item-check">
         <span class="menu__item-price">22€</span>
-      </article>
+        <i class="fa-solid fa-circle-check"></i>
+      </div>
+    </article>
 
-      <article class="menu__item">
-        <div>
+    <article class="menu__item">
+      <div>
         <h5 class="menu__item-name">Mousse au chocolat</h5>
         <p class="menu__item-description">Au piment d'Espelette et à la truffe noire</p>
-        </div>
+      </div>
+      <div class="menu__item-check">
         <span class="menu__item-price">23€</span>
-      </article>
-    </div>
-  </div>
+        <i class="fa-solid fa-circle-check"></i>
+      </div>
+    </article>
 
+  </div>
   <button class="button__intro">Commander</button>
+</div>
+  </div>
 
   <footer class="footer">
     <div class="footer__logo">
