--- a/menu-le-delice-des-sens.html
+++ b/menu-le-delice-des-sens.html
@@ -28,6 +28,7 @@
   <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
 </div>
 
+  <div class="menu__content">
   <div class="menu__info">
     <h3 class="menu__name">Le délice des sens</h3>
     <span class="menu__heart">
@@ -35,97 +36,129 @@
     </span>
   </div>
 
-<div class="menu__category">
+  <div class="menu__category">
     <h4 class="menu__category-title">ENTRÉES</h4>
     <div class="menu__list">
-
+  
       <article class="menu__item">
         <div>
-        <h5 class="menu__item-name">Tartare de thon</h5>
-        <p class="menu__item-description">Assaisonné au yuzu</p>
+          <h5 class="menu__item-name">Tartare de thon</h5>
+          <p class="menu__item-description">Assaisonné au yuzu</p>
         </div>
-        <span class="menu__item-price">25€</span>
+        <div class="menu__item-check">
+          <span class="menu__item-price">25€</span>
+          <i class="fa-solid fa-circle-check"></i>
+        </div>
       </article>
-
+  
       <article class="menu__item">
         <div>
-        <h5 class="menu__item-name">Bouchée de homard croustillant</h5>
-        <p class="menu__item-description">Et sa farandole de petits légumes</p>
+          <h5 class="menu__item-name">Bouchée de homard croustillant</h5>
+          <p class="menu__item-description">Et sa farandole de petits légumes</p>
         </div>
-        <span class="menu__item-price">35€</span>
+        <div class="menu__item-check">
+          <span class="menu__item-price">35€</span>
+          <i class="fa-solid fa-circle-check"></i>
+        </div>
       </article>
-
+  
       <article class="menu__item">
         <div>
-        <h5 class="menu__item-name">Velouté de cèpes</h5>
-        <p class="menu__item-description">Aux truffes</p>
+          <h5 class="menu__item-name">Velouté de cèpes</h5>
+          <p class="menu__item-description">Aux truffes</p>
         </div>
-        <span class="menu__item-price">20€</span>
+        <div class="menu__item-check">
+          <span class="menu__item-price">20€</span>
+          <i class="fa-solid fa-circle-check"></i>
+        </div>
       </article>
+  
     </div>
   </div>
+  
   
   <div class="menu__category">
     <h4 class="menu__category-title">PLATS</h4>
     <div class="menu__list">
-
+  
       <article class="menu__item">
         <div>
-        <h5 class="menu__item-name">Poulet rôti aux herbes de Provence</h5>
-        <p class="menu__item-description">Et sa crème de truffe</p>
+          <h5 class="menu__item-name">Poulet rôti aux herbes de Provence</h5>
+          <p class="menu__item-description">Et sa crème de truffe</p>
         </div>
-        <span class="menu__item-price">40€</span>
+        <div class="menu__item-check">
+          <span class="menu__item-price">40€</span>
+          <i class="fa-solid fa-circle-check"></i>
+        </div>
       </article>
-
+  
       <article class="menu__item">
         <div>
-        <h5 class="menu__item-name">Langouste rôtie</h5>
-        <p class="menu__item-description">Et ses légumes de saison</p>
+          <h5 class="menu__item-name">Langouste rôtie</h5>
+          <p class="menu__item-description">Et ses légumes de saison</p>
         </div>
-        <span class="menu__item-price">35€</span>
+        <div class="menu__item-check">
+          <span class="menu__item-price">35€</span>
+          <i class="fa-solid fa-circle-check"></i>
+        </div>
       </article>
-
+  
       <article class="menu__item">
         <div>
-        <h5 class="menu__item-name">Côte de bœuf Angus</h5>
-        <p class="menu__item-description">Et sa purée de panais</p>
+          <h5 class="menu__item-name">Côte de bœuf Angus</h5>
+          <p class="menu__item-description">Et sa purée de panais</p>
         </div>
-        <span class="menu__item-price">44€</span>
+        <div class="menu__item-check">
+          <span class="menu__item-price">44€</span>
+          <i class="fa-solid fa-circle-check"></i>
+        </div>
       </article>
+  
     </div>
   </div>
-
+  
+  
   <div class="menu__category">
     <h4 class="menu__category-title">DESSERTS</h4>
     <div class="menu__list">
-
+  
       <article class="menu__item">
         <div>
-        <h5 class="menu__item-name">Farandole de desserts</h5>
-        <p class="menu__item-description">Du chef</p>
+          <h5 class="menu__item-name">Farandole de desserts</h5>
+          <p class="menu__item-description">Du chef</p>
         </div>
-        <span class="menu__item-price">18€</span>
+        <div class="menu__item-check">
+          <span class="menu__item-price">18€</span>
+          <i class="fa-solid fa-circle-check"></i>
+        </div>
       </article>
-
+  
       <article class="menu__item">
         <div>
-        <h5 class="menu__item-name">Crème brulée</h5>
-        <p class="menu__item-description">Revisitée</p>
+          <h5 class="menu__item-name">Crème brulée</h5>
+          <p class="menu__item-description">Revisitée</p>
         </div>
-        <span class="menu__item-price">22€</span>
+        <div class="menu__item-check">
+          <span class="menu__item-price">22€</span>
+          <i class="fa-solid fa-circle-check"></i>
+        </div>
       </article>
-
+  
       <article class="menu__item">
         <div>
-        <h5 class="menu__item-name">Tiramisu</h5>
-        <p class="menu__item-description">À la noisette</p>
+          <h5 class="menu__item-name">Tiramisu</h5>
+          <p class="menu__item-description">À la noisette</p>
         </div>
-        <span class="menu__item-price">23€</span>
+        <div class="menu__item-check">
+          <span class="menu__item-price">23€</span>
+          <i class="fa-solid fa-circle-check"></i>
+        </div>
       </article>
+  
     </div>
+    <button class="button__intro">Commander</button>
+  </div>         
   </div>
-
-  <button class="button__intro">Commander</button>
 
   <footer class="footer">
     <div class="footer__logo">
